--- a/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/Views/Web.config
+++ b/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/Views/Web.config
@@ -7,7 +7,9 @@
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
   </configSections>
-
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=sabiodata-03.cdzsexgreyji.us-west-2.rds.amazonaws.com;Database=hack_exp_1;User ID=hack_exp_1_user;Password=Sabiopass1!;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
