--- a/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/Web.Debug.config
+++ b/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/Web.Debug.config
@@ -4,7 +4,7 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <!--
-    In the example below, the "SetAttributes" transform will change the value of
+    In the att below, the "SetAttributes" transform will change the value of
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
     finds an attribute "name" that has a value of "MyDB".
 
@@ -16,7 +16,7 @@
   -->
   <system.web>
     <!--
-      In the example below, the "Replace" transform will replace the entire
+      In the att below, the "Replace" transform will replace the entire
       <customErrors> section of your Web.config file.
       Note that because there is only one customErrors section under the
       <system.web> node, there is no need to use the "xdt:Locator" attribute.
