adding class library for domain models and services

--- a/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/ATT_Shape_Hackathon.web.csproj
+++ b/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/ATT_Shape_Hackathon.web.csproj
@@ -1011,6 +1011,12 @@
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ATT_Shape.domain\ATT_Shape.domain.csproj">
+      <Project>{f2049921-3268-498a-ae14-b9eb72e4aa9d}</Project>
+      <Name>ATT_Shape.domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
