--- a/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/ATT_Shape_Hackathon.web.csproj
+++ b/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/ATT_Shape_Hackathon.web.csproj
@@ -175,8 +175,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Channel.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BaseService.cs" />
+    <Compile Include="Services\ChannelService.cs" />
     <Compile Include="Services\PeopleService.cs" />
   </ItemGroup>
   <ItemGroup>
