Finished out Video entity API

--- a/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/ATT_Shape_Hackathon.web.csproj
+++ b/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/ATT_Shape_Hackathon.web.csproj
@@ -170,6 +170,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\API\PeopleApiController.cs" />
+    <Compile Include="Controllers\API\VideoApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PeopleController.cs" />
     <Compile Include="Global.asax.cs">
