--- a/ATT_Shape_Hackathon/ATT_Shape.domain/ATT_Shape.domain.csproj
+++ b/ATT_Shape_Hackathon/ATT_Shape.domain/ATT_Shape.domain.csproj
@@ -39,6 +39,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -68,6 +69,8 @@
     <Compile Include="Handlers\WebApiMissingRouteHandler.cs" />
     <Compile Include="Interfaces\IDao.cs" />
     <Compile Include="Models\Request\ExceptionSearchRequest.cs" />
+    <Compile Include="Models\Request\VideoAddRequest.cs" />
+    <Compile Include="Models\Request\VideoUpdateRequest.cs" />
     <Compile Include="Models\Response\BaseResponse.cs" />
     <Compile Include="Models\Response\ErrorResponse.cs" />
     <Compile Include="Models\Response\ItemResponse.cs" />
