--- a/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/Web.config
+++ b/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/Web.config
@@ -8,6 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=sabiodata-03.cdzsexgreyji.us-west-2.rds.amazonaws.com;Database=hack_exp_1;User ID=hack_exp_1_user;Password=Sabiopass1!;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
